--- a/강좌/udemy -  20 Web Projects With Vanilla JavaScript/project01_form_validator/index.html
+++ b/강좌/udemy -  20 Web Projects With Vanilla JavaScript/project01_form_validator/index.html
@@ -11,13 +11,26 @@
       <form id="form" class="form">
         <h2>Register with Us</h2>
         <div class="form-control">
+          <label for="nickname">Nickname</label>
+          <input
+            type="text"
+            id="nickname"
+            placeholder="Enter nickname"
+            required="required"
+            oninvalid="validateNickname(this);"
+            oninput="validateNickName(this);"
+          />
+          <small>Error message</small>
+        </div>
+
+        <div class="form-control">
           <label for="username">Username</label>
           <input type="text" id="username" placeholder="Enter username" />
           <small>Error message</small>
         </div>
         <div class="form-control">
           <label for="email">Email</label>
-          <input type="text" id="email" placeholder="Enter email" />
+          <input type="email" id="email" placeholder="Enter email" />
           <small>Error message</small>
         </div>
         <div class="form-control">
